# climbge

./: .dockerignore  .gitignore  LoginPage.tsx  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: deploy-backend.yml
backend/: .gitignore  Dockerfile  app.py
backend/routes/: __init__.py  auth.py  buddy.py  climb.py  feedback.py  history.py  news.py  user_stats.py
backend/services/: auth_service.py  buddy_service.py  climb_service.py  feedback_service.py  grade_service.py  history_service.py  news_service.py  user_profile_service.py  user_stats_service.py
backend/utils/: auth.py  connect_db.py  conversions.py  http.py  logger.py  mail.py  parse_timestamp.py  relative_day.py  security.py  serializer.py  user_profile.py
frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
frontend/dev-dist/: sw.js
frontend/public/: _headers  _redirects
frontend/src/: App.tsx  ForgotPasswordPage.tsx  LoginPage.tsx  ResetPasswordPage.tsx  SignupPage.tsx  globals.css  index.css  main.tsx  vite-env.d.ts
frontend/src/components/: BuddyGroupDialog.tsx  EditMeasurements.tsx  Feedback.tsx  HangboardTimer.tsx  InviteBanner.tsx  NewGradeSystemDialog.tsx  NewLocationDialog.tsx  Newsboard.tsx  PlanClimbDialog.tsx  ReviewSubmissionsDialog.tsx
frontend/src/components/ui/: alert.tsx  badge.tsx  button.tsx  card.tsx  (+9 more)
frontend/src/lib/: api.ts  url.ts
frontend/src/tabs/: BuddiesPage.tsx  ClimbPage.tsx  HistoryPage.tsx  HomePage.tsx  LoginPage.tsx  ProfilePage.tsx  SignupPage.tsx
frontend/src/types/: buddy.ts  climb.ts  news.ts  user.ts
