[project]
name = "my-project"
version = "1.0.0"
requires-python = "==3.12.0"
dependencies = [
    "arrow==1.3.0",
    "attrs==25.3.0",
    "auth==0.5.3",
    "bcrypt==4.3.0",
    "blinker==1.9.0",
    "certifi==2025.8.3",
    "cffi==1.17.1",
    "charset-normalizer==3.4.3",
    "circuitbreaker==2.1.3",
    "click==8.2.1",
    "cryptography==44.0.3",
    "dnspython==2.7.0",
    "eventlet==0.40.2",
    "falcon==4.1.0",
    "flasgger==0.9.7.1",
    "flask==3.1.1",
    "flask-cors==6.0.1",
    "flask-jwt-extended==4.7.1",
    "flask-login==0.6.3",
    "greenlet==3.2.4",
    "gunicorn==23.0.0",
    "idna==3.10",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "jmespath==0.10.0",
    "jsonschema==4.25.0",
    "jsonschema-specifications==2025.4.1",
    "logging==0.4.9.6",
    "markupsafe==3.0.2",
    "mistune==3.1.3",
    "mongoengine==0.29.1",
    "oci==2.158.2",
    "packaging==25.0",
    "prompt-toolkit==3.0.43",
    "psycopg==3.2.9",
    "psycopg-binary==3.2.9",
    "psycopg-pool==3.2.6",
    "pycparser==2.22",
    "pyjwt==2.10.1",
    "pymongo==4.14.0",
    "pyopenssl==24.3.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "referencing==0.36.2",
    "requests==2.32.4",
    "rpds-py==0.27.0",
    "setuptools==80.9.0",
    "six==1.17.0",
    "terminaltables==3.1.10",
    "types-python-dateutil==2.9.0.20250822",
    "typing-extensions==4.14.1",
    "urllib3==2.5.0",
    "wcwidth==0.2.13",
    "werkzeug==3.1.3",
]
